# rune-caster

./: .gitignore  .trivyignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  QUICK_START.md  README.md
.cursor/rules/: build-system.mdc  coding-style.mdc  development-workflow.mdc  project-structure.mdc  troubleshooting.mdc
.github/workflows/: ci.yml  docs.yml
cmake/: RuneCasterConfig.cmake.in
docs/: DEPENDENCIES.md  PRD.md  README.md  ROADMAP.md  SECURITY_SETUP.md  api-design.md  development-guide.md  mainpage.md  style.css  technical-architecture.md
examples/: CMakeLists.txt  README.md  basic_usage.cpp  case_converter_usage.cpp  caster_pipeline_demo.cpp  gcc15_concepts_demo.cpp  multilingual_ranges_demo.cpp  sequence_usage.cpp  spell_demo.cpp  spell_usage.cpp  unicode_test.cpp  unified_spell_demo.cpp
include/rune_caster/: caster.hpp  concepts.hpp  language.hpp  rune.hpp  rune_sequence.hpp  spell.hpp  spell_base.hpp  spell_composition.hpp  spell_core.hpp  spell_extensible.hpp  spell_factory.hpp  spell_filter.hpp  spell_language.hpp  spell_token.hpp  spell_unified.hpp  spells.hpp  unicode.hpp  version.hpp
modules/: rune_caster_concepts.cppm
src/rune/: rune.cpp  rune_sequence.cpp
src/spell/: case_converter.cpp  unified_spell.cpp  whitespace_normalizer.cpp
src/spell/core/: case_converter.cpp  trim_edges.cpp  unicode_normalizer.cpp  whitespace_normalizer.cpp  whitespace_tokenizer.cpp
src/spell/filter/: punctuation_filter.cpp
src/spell/language/: language_detector.cpp
tests/unit/: CMakeLists.txt  test_rune.cpp  test_spell.cpp  test_trim.cpp
